Update store information section

--- a/_data/store-hours.yml
+++ b/_data/store-hours.yml
@@ -1,6 +1,8 @@
 hours:
   - storeName: The Hub
     storeLogo: images/logo-hub.svg
+    telDisplay: (613) 256-5225
+    tel: '+16132565225'
     addressLink: https://goo.gl/maps/sByyfsxP7w82
     storeAddress1: 14 Industrial Dr
     storeAddress2: Almonte, ON K0A 1A0
@@ -21,6 +23,8 @@ hours:
       sunClose: Closed
   - storeName: Rebound
     storeLogo: images/logo-rebound.svg
+    telDisplay: (613) 256-5225
+    tel: '+16132565225'
     addressLink: https://goo.gl/maps/sByyfsxP7w82
     storeAddress1: 14 Industrial Dr
     storeAddress2: Almonte, ON K0A 1A0
