--- a/admin/config.yml
+++ b/admin/config.yml
@@ -851,9 +851,9 @@ collections:
             name: "mapLink"
             widget: "string"
   - name: "hours"
-    label: "Store Hours"
+    label: "Store Hours & Information"
     files:
-      - label: "Store Hours"
+      - label: "Store Hours & Information"
         name: "hours"
         file: "_data/store-hours.yml"
         fields:
@@ -867,6 +867,14 @@ collections:
               - label: "Store Logo"
                 name: "storeLogo"
                 widget: "image"
+              - label: "Telephone Number Display"
+                name: "telDisplay"
+                widget: "string"
+                hint: "This version is for the user to view. Write in easily readable way. Ex: (613) 256-5225"
+              - label: "Telephone Number Data"
+                name: "tel"
+                widget: "string"
+                hint: "This version is for the browser link. No spaces or dashes. Ex: +16132565225"
               - label: "Address Line 1"
                 name: "storeAddress1"
                 widget: "string"
