Add truncate and post preview control

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -685,6 +685,18 @@ collections:
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
+          - label: "News & Events Previews"
+            name: "previews"
+            widget: "object"
+            fields:
+              - label: "Max Event Preview Amount"
+                name: "maxEvents"
+                widget: "number"
+                hint: "What is the maximum number of events previews you want displayed on the News & Events page?"
+              - label: "Max News Preview Amount"
+                name: "maxEvents"
+                widget: "number"
+                hint: "What is the maximum number of news previews you want displayed on the News & Events page?"
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
@@ -763,7 +775,7 @@ collections:
       - label: "Preview Text"
         name: "meta"
         widget: "string"
-        hint: "Description or first line of article. Max characters: 100"
+        hint: "Description or first line of article. Max characters: 70"
       - label: "Image"
         name: "banImage"
         widget: "image"
@@ -790,7 +802,7 @@ collections:
       - label: "Preview Text"
         name: "meta"
         widget: "string"
-        hint: "Description or first line of article. Max characters: 50"
+        hint: "Description or first line of article. Max characters: 150"
       - label: "Date"
         name: "eventDate"
         widget: "string"
