--- a/admin/config.yml
+++ b/admin/config.yml
@@ -325,6 +325,10 @@ collections:
               - label: "Form Title"
                 name: "formTitle"
                 widget: "hidden"
+              - label: "Submission Email"
+                name: "formSubmitEmail"
+                widget: "string"
+                hint: "Fill in the email that you would like to receive the information submitted in the form. If you change the email, you will need to submit the form as a test to activate the change."
               - label: "Personal Info"
                 name: "personalInfo"
                 widget: "object"
