Add thank you page

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: arobillard/the-hub-almonte
+  repo: the-hub-almonte/the-hub-almonte
 
 media_folder: "images/uploads"
 display_url: https://thehubalmonte.com
@@ -755,6 +755,64 @@ collections:
           - label: "Body Content"
             name: "bodyContent"
             widget: "markdown"
+          - label: "Include sponsor bar?"
+            name: "sponsorBar"
+            widget: "boolean"
+            hint: "Turn on to include list of sponsors at bottom of page above footer."
+      - label: "Thank You"
+        name: "thank-you"
+        file: _data/pages/thank-you.yml
+        fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "hidden"
+          - label: "SEO Page Description"
+            name: "metaDesc"
+            widget: "string"
+            hint: "This description is for Search Engine Optimization. It will not be visible on the web page but helps describe the page to search engines like Google."
+          - label: "Page Headline"
+            name: "h1Text"
+            widget: "string"
+          - label: "Page Byline"
+            name: "bylineText"
+            widget: "string"
+          - label: "Include Banner?"
+            name: "hero"
+            widget: "boolean"
+            hint: "Turn on to include banner at top of the page. The banner will include the Page Headline and Page Byline."
+          - label: "Banner"
+            name: "banner"
+            widget: "object"
+            fields:
+              - label: "Banner Button"
+                name: "bannerButton"
+                widget: "object"
+                fields:
+                  - label: "Include button in banner?"
+                    name: "heroBtn"
+                    widget: "boolean"
+                    hint: "Turn on to include button in banner."
+                  - label: "Button Link"
+                    name: "heroBtnLink"
+                    widget: "string"
+                  - label: "Button Text"
+                    name: "heroBtnText"
+                    widget: "string"
+                  - label: "Button Styles"
+                    name: "heroBtnStyle"
+                    widget: "string"
+                    hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
+              - label: "Banner Image"
+                name: "heroImg"
+                widget: "image"
+          - label: "Body Content"
+            name: "bodyContent"
+            widget: "markdown"
+          - label: "Include News & Events Preview?"
+            name: "newsPreview"
+            widget: "boolean"
+            hint: "Turn on to include preview of recent News & Events at bottom of page above footer."
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
