Update boolean for news preview nd add 404

--- a/_data/pages/volunteer.yml
+++ b/_data/pages/volunteer.yml
@@ -240,3 +240,5 @@ volunteer-form:
         name: student
         type: radio
     legend: Are you a student seeking volunteer hours?
+sponsorBar: false
+newsPreview: false
