--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -27,3 +27,4 @@ announcements:
     We recently received a full dining room set including table, four chairs,
     dishes, candle sticks, and more!
 sponsorBar: true
+newsPreview: true
