--- a/_data/pages/thank-you.yml
+++ b/_data/pages/thank-you.yml
@@ -12,7 +12,7 @@ banner:
   heroImg:
 bodyContent: >-
   <div class="text-center">
-    <a class="btn" href="https:thehubalmonte.com">Return Home</a>
+    <a class="btn" href="https://thehubalmonte.com">Return Home</a>
   </div>
 sponsorBar: true
 newsPreview: true
