--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -4,8 +4,8 @@ metaDesc: >-
   store that raises money to benefit their community.
 h1Text: Giving back to the community since 1974.
 bylineText: >-
-  The Hub’s goal has always been to service the greater Almonte community and be
-  there when they need us most.
+  Test The Hub’s goal has always been to service the greater Almonte community
+  and be there when they need us most.
 hero: true
 banner:
   bannerButton:
@@ -27,4 +27,3 @@ announcements:
     We recently received a full dining room set including table, four chairs,
     dishes, candle sticks, and more!
 sponsorBar: true
-newsPreview: true
