Home newspreview added

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -92,6 +92,10 @@ collections:
               - label: "Announcement Image"
                 name: "announcementImg"
                 widget: "image"
+          - label: "Include News & Events Preview?"
+            name: "newsPreview"
+            widget: "boolean"
+            hint: "Turn on to include preview of recent News & Events at bottom of page above footer."
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
