--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -2,7 +2,7 @@ title: Home
 metaDesc: >-
   A fixture in the Almonte community since 1974, The Hub is a not-for-profit
   store that raises money to benefit their community.
-h1Text: Giving back to the community since 1974.
+h1Text: Making communities Great again.
 bylineText: >-
   The Hub’s goal has always been to service the greater Almonte community and be
   there when they need us most.
@@ -26,5 +26,5 @@ announcements:
 
     We recently received a full dining room set including table, four chairs,
     dishes, candle sticks, and more!
-sponsorBar: true
 newsPreview: true
+sponsorBar: true
