--- a/admin/config.yml
+++ b/admin/config.yml
@@ -246,6 +246,20 @@ collections:
                   - label: "Amount"
                     name: "amount"
                     widget: "string"
+              - label: "Donations Total"
+                name: "donationsTotal"
+                widget: "string"
+              - label: "Past Donations"
+                name: "donationsDropdown"
+                widget: "list"
+                fields:
+                  - label: "Year Title"
+                    name: "yearsLabel"
+                    widget: "string"
+                  - label: "File Link"
+                    name: "yearsLink"
+                    widget: "string"
+                    hint: "Upload pdf file to the media section of CMS and then enter the link to the file here."
           - label: "Board of Directors"
             name: "board"
             widget: "object"
