Add charitable status info

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -184,6 +184,7 @@ collections:
                   - label: "Slide Text Content"
                     name: "content"
                     widget: "markdown"
+                    hint: "The content in the slides should be kept brief. The goal is to present small snapshots of content that tell a story, instead of text heavy content. Recommended content length is 200 - 400 characters."
                   - label: "Slide Image"
                     name: "image"
                     widget: "image"
@@ -913,7 +914,11 @@ collections:
       - label: "Preview Text"
         name: "meta"
         widget: "string"
-        hint: "Description or first line of article. Max characters: 70"
+        hint: "Description or first line of article. Max characters: 120"
+      - label: "Include banner on article page?"
+        name: "banner"
+        widget: "boolean"
+        default: "true"
       - label: "Image"
         name: "banImage"
         widget: "image"
@@ -940,7 +945,7 @@ collections:
       - label: "Preview Text"
         name: "meta"
         widget: "string"
-        hint: "Description or first line of article. Max characters: 150"
+        hint: "Description or first line of article. Max characters: 70"
       - label: "Date"
         name: "eventDate"
         widget: "string"
@@ -1140,3 +1145,13 @@ collections:
               - label: "Link"
                 name: "link"
                 widget: "string"
+  - name: "charitable-status"
+    label: "Charitable Status Info"
+    files:
+      - label: "Charitable Status Info"
+        name: "charitable-status"
+        file: "_data/charitable-status.yml"
+        fields:
+          - label: "Charitable Status Information"
+            name: "csInfo"
+            widget: "makdown"
