--- a/_data/charitable-status.yml
+++ b/_data/charitable-status.yml
@@ -1,2 +1,9 @@
 csInfo: >-
-  Hello
+  ## Canada Revenue charitable status
+
+
+  The Hub and Rebound has been a Registered Canadian Charity since 1979. Our
+  charitable number is **118784206RR0001**. Feel free to [review our charitable
+  listing](http://www.cra-arc.gc.ca/ebci/haip/srch/t3010form22QuickView-eng.action?b=118784206RR0001&fpe=2014-12-31&r=http%3A%2F%2Fwww.cra-arc.gc.ca%3A80%2Febci%2Fhaip%2Fsrch%2Fbasicsearchresult-eng.action%3Fk%3DAlmonte%26amp%3Bs%3Dregistered%26amp%3Bp%3D1%26amp%3Bb%3Dtrue)
+  on the Canada Revenue website, for details regarding our programs, activities
+  and revenue dispersal.
