--- a/_data/pages/volunteer.yml
+++ b/_data/pages/volunteer.yml
@@ -243,7 +243,7 @@ volunteer-form:
   qualifications:
     fields:
       - id: qualifications
-        label: qualifications
+        label: Qualifications
         name: qualifications
     legend: Describe any related experience or qualifications.
 sponsorBar: false
